--- a/myApp/src/pages/page1/page1.html
+++ b/myApp/src/pages/page1/page1.html
@@ -9,8 +9,8 @@
 
 <ion-content padding>
 
-  
-  <h3>Ionic Menu Starter</h3>
+
+  <h3>Ionic Test1</h3>
 
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
@@ -18,5 +18,5 @@
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
 
-  
+
 </ion-content>
