--- a/myApp/src/pages/page4/page4.html
+++ b/myApp/src/pages/page4/page4.html
@@ -15,7 +15,7 @@
 
     <ion-card-content>
       <ion-card-title>
-        Björk
+        UI Test
       </ion-card-title>
       <p>
         Björk first came to prominence as one of the lead vocalists of the avant pop Icelandic sextet the Sugarcubes, but when...
