page seven insert

--- a/myApp/src/pages/page5/page5.html
+++ b/myApp/src/pages/page5/page5.html
@@ -6,7 +6,7 @@
     <ion-title>Badges</ion-title>
   </ion-navbar>
 </ion-header>
-
+<!-- 커밋 실행 -->
 
 <ion-content class="tutorial-page">
 
@@ -27,7 +27,7 @@
       <img src="assets/img/ica-slidebox-img-4.png" class="slide-image"/>
       <h2 class="slide-title">Ready to Play?</h2>
       <button ion-button large clear icon-right color="primary">
-        Continue
+        Continue!
         <ion-icon name="arrow-forward"></ion-icon>
       </button>
     </ion-slide>
